# keiba-predictor

./: .env.example  .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 27d1d595ca74_initial_migration.py  add_leading_data_and_calibration.py  add_race_type_column.py  add_training_table.py  ae226a6d8178_add_race_detail_columns.py
backend/app/: config.py  constants.py  logging_config.py  main.py
backend/app/api/routes/: __init__.py  data.py  history.py  horses.py  jockeys.py  model.py  predictions.py  races.py  stats.py  sync.py
backend/app/db/: base.py
backend/app/models/: __init__.py  horse.py  jockey.py  prediction.py  race.py  trainer.py  training.py
backend/app/schemas/: __init__.py  prediction.py  race.py
backend/app/services/: __init__.py  feature_sync_service.py  prediction_service.py  race_service.py  retraining_service.py  scraper_service.py  storage_service.py  sync_service.py  training_service.py
backend/app/services/predictor/: __init__.py  features.py  features_banei.py  features_local.py  model.py
backend/app/services/scraper/: __init__.py  base.py  horse.py  jockey.py  odds.py  race.py  shutuba.py  trainer.py  training.py
backend/ml/: __init__.py  evaluate.py  evaluate_banei.py  simulate.py  train.py  train_banei.py
backend/ml/config/: selected_models.json
backend/scripts/: init_data.py  scrape_races.py
backend/tests/: conftest.py  test_api.py  test_models.py  test_scrapers.py  test_services.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  (+7 more)
(+99 files in other folders)
